hphp/test/zend/bad/tests-classes/final_abstract.php
<?php

class fail {
	final abstract function show();
}

echo "Done\n"; // Shouldn't be displayed
?>